# prakrit-verb

./: Cargo.toml  LICENSE  README.md
bhuta-kala/: Cargo.toml
bhuta-kala/src/: dev_generator.rs  main.rs  slp_generator.rs
examples/: verbs.txt
src/: cli.rs  encoding.rs  error.rs  lib.rs  main.rs  models.rs
src/conjugation/: affixes.rs  future.rs  mod.rs  past.rs  present.rs
src/io/: batch.rs  csv_writer.rs  json_writer.rs  mod.rs
vartamAna-kAla/: Cargo.toml
vartamAna-kAla/src/: main.rs
