[package]
name = "prakrit-verb-cli"
version = "1.0.0"
edition = "2021"
description = "Prakrit verb conjugation generator CLI tool"
authors = ["Vyom A. Shah"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "2.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
